crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_wrap_capped_line_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"lastcall  3 repos · 4 files · 4 hunks  standalone  [Accept All]                           watching W"
"┌──────────────────────────┬───────────────────────────────────────────────────────────────────────┐"
"│alpha                     │f1  M  +1 −1                           [A accept file] [U restore file]│"
"│  main · 1 file           │+payload payload payload payload payload payload payload payload       │"
"│  M f1  +1 −1             │+payload payload payload payload payload payload payload payload       │"
"│──────────────────────────│+payload payload payload payload payload payload payload payload       │"
"│beta                      │+payload payload payload payload payload payload payload payload       │"
"│  main · 2 files          │+payload payload payload payload payload payload payload payload       │"
"│  A u1  +1 −0  [upstream] │+payload payload payload payload payload payload payload payload       │"
"│  A u2  +2 −0  [mixed]    │+payload payload payload payload payload payload payload payload       │"
"│  [upstream] 1 file       │+payload payload payload payload payload payload payload payload       │"
"│──────────────────────────│+payload payload payload payload payload payload payload payload       │"
"│W/notes                   │+payload payload payload payload payload payload payload payload       │"
"│  draft · 1 file          │+payload payload payload payload payload payload payload payload       │"
"│  M n2.md  +2 −0          │+payload payload payload payload payload payload payload payload       │"
"│                          │+payload payload payload payload payload payload payload payload       │"
"│                          │+payload payload payload payload payload payload payload payload       │"
"│                          │+payload payload payload payload payload payload payload payload       │"
"│                          │+payload payload payload payload payload payload payload payload       │"
"│                          │+payload payload payload payload payload payload payload payload       │"
"│                          │+payload payload payload payload payload payload payload payload       │"
"│                          │+payload payload payload payload payload payload payload payload       │"
"│                          │+payload payload payload payload payload payload payload payload       │"
"│                          │+payload payload payload payload payload payload payload payload       │"
"│                          │+payload payload payload payload payload payload payload payloa … +1794│"
"│                          │ line 4                                                                │"
"│                          │ line 5                                                                │"
"│                          │ line 6                                                                │"
"└──────────────────────────┴───────────────────────────────────────────────────────────────────────┘"
"↑↓ scroll  ← back  n/p hunk  a accept hunk  A accept file  z undo  t hide empty  ? help  q quit     "
