crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_wrap_clipped_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"lastcall  3 repos · 4 files · 4 hunks  standalone  [Accept All]                           watching W"
"┌──────────────────────────┬───────────────────────────────────────────────────────────────────────┐"
"│alpha                     │f1  M  +2 −2                           [A accept file] [U restore file]│"
"│  main · 1 file           │@@ -1,9 +1,9 @@                         [a accept] [u restore] [m flag]│"
"│  M f1  +2 −2             │ line 1                                                                │"
"│──────────────────────────│ line 2                                                                │"
"│beta                      │-line 3                                                                │"
"│  main · 2 files          │+the reviewer gets to read this line all the way to its end, because th│"
"│  A u1  +1 −0  [upstream] │ line 4                                                                │"
"│  A u2  +2 −0  [mixed]    │ line 5                                                                │"
"│  [upstream] 1 file       │-line 6                                                                │"
"│──────────────────────────│+crates/lastcall/src/tui/wrap.rs::layout::a_single_unbroken_token_that_│"
"│W/notes                   │ line 7                                                                │"
"│  draft · 1 file          │ line 8                                                                │"
"│  M n2.md  +2 −0          │ line 9                                                                │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"└──────────────────────────┴───────────────────────────────────────────────────────────────────────┘"
"↑↓ scroll  ← back  n/p hunk  a accept hunk  A accept file  z undo  t hide empty  ? help  q quit     "
