crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_wrap_long_lines_80x24_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"lastcall  3 repos · 4 files · 4 hunks  standalone  [Accept All]       watching W"
"┌──────────────────────────┬───────────────────────────────────────────────────┐"
"│alpha                     │f1  M  +2 −2       [A accept file] [U restore file]│"
"│  main · 1 file           │@@ -1,9 +1,9 @@     [a accept] [u restore] [m flag]│"
"│  M f1  +2 −2             │ line 1                                            │"
"│──────────────────────────│ line 2                                            │"
"│beta                      │-line 3                                            │"
"│  main · 2 files          │+the reviewer gets to read this line all the way   │"
"│  A u1  +1 −0  [upstream] │+to its end, because the pane wrapped it instead   │"
"│  A u2  +2 −0  [mixed]    │+of cutting it off wherever the window happened to │"
"│  [upstream] 1 file       │+stop                                              │"
"│──────────────────────────│ line 4                                            │"
"│W/notes                   │ line 5                                            │"
"│  draft · 1 file          │-line 6                                            │"
"│  M n2.md  +2 −0          │+crates/lastcall/src/tui/wrap.rs::layout::a_single_│"
"│                          │+unbroken_token_that_no_whitespace_will_ever_break_│"
"│                          │+for_us                                            │"
"│                          │ line 7                                            │"
"│                          │ line 8                                            │"
"│                          │ line 9                                            │"
"│                          │                                                   │"
"│                          │                                                   │"
"└──────────────────────────┴───────────────────────────────────────────────────┘"
"↑↓ scroll  ← back  n/p hunk  a accept hunk  A accept file  ? help  q quit       "
