crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_wrap_long_lines_80x24_styles.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: style
---
0 0..37 Reset Reset BOLD
0 39..49 Reset Reset DIM
1 27..80 Cyan Reset -
2 1..6 Reset Reset BOLD
2 27..28 Cyan Reset -
2 28..30 Reset Reset BOLD
2 35..37 Green Reset -
2 38..40 Red Reset -
2 47..79 Reset Reset DIM
2 79..80 Cyan Reset -
3 27..28 Cyan Reset -
3 28..79 Reset Reset REVERSED
3 79..80 Cyan Reset -
4 1..9 Reset Reset REVERSED
4 9..11 Green Reset REVERSED
4 11..12 Reset Reset REVERSED
4 12..14 Red Reset REVERSED
4 14..27 Reset Reset REVERSED
4 27..28 Cyan Reset -
4 79..80 Cyan Reset -
5 1..27 Reset Reset DIM
5 27..28 Cyan Reset -
5 79..80 Cyan Reset -
6 1..5 Reset Reset BOLD
6 27..28 Cyan Reset -
6 28..35 Red Reset -
6 79..80 Cyan Reset -
7 27..28 Cyan Reset -
7 28..77 Green Reset -
7 79..80 Cyan Reset -
8 9..11 Green Reset -
8 12..14 Red Reset -
8 14..26 Reset Reset DIM
8 27..28 Cyan Reset -
8 28..29 Green Reset DIM
8 29..77 Green Reset -
8 79..80 Cyan Reset -
9 9..11 Green Reset -
9 12..14 Red Reset -
9 14..23 Reset Reset DIM
9 27..28 Cyan Reset -
9 28..29 Green Reset DIM
9 29..79 Green Reset -
9 79..80 Cyan Reset -
10 27..28 Cyan Reset -
10 28..29 Green Reset DIM
10 29..33 Green Reset -
10 79..80 Cyan Reset -
11 1..27 Reset Reset DIM
11 27..28 Cyan Reset -
11 79..80 Cyan Reset -
12 1..8 Reset Reset BOLD
12 27..28 Cyan Reset -
12 79..80 Cyan Reset -
13 27..28 Cyan Reset -
13 28..35 Red Reset -
13 79..80 Cyan Reset -
14 12..14 Green Reset -
14 15..17 Red Reset -
14 27..28 Cyan Reset -
14 28..79 Green Reset -
14 79..80 Cyan Reset -
15 27..28 Cyan Reset -
15 28..29 Green Reset DIM
15 29..79 Green Reset -
15 79..80 Cyan Reset -
16 27..28 Cyan Reset -
16 28..29 Green Reset DIM
16 29..35 Green Reset -
16 79..80 Cyan Reset -
17 27..28 Cyan Reset -
17 79..80 Cyan Reset -
18 27..28 Cyan Reset -
18 79..80 Cyan Reset -
19 27..28 Cyan Reset -
19 79..80 Cyan Reset -
20 27..28 Cyan Reset -
20 79..80 Cyan Reset -
21 27..28 Cyan Reset -
21 79..80 Cyan Reset -
22 27..80 Cyan Reset -
23 0..73 Reset Reset DIM
